--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>test</title>
-  </head>
-  <body>
-    Hello World
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>finkiin</title><link href="/css/app.fb0c6e1c.css" rel="preload" as="style"><link href="/js/app.3af47145.js" rel="preload" as="script"><link href="/js/chunk-vendors.28d0d835.js" rel="preload" as="script"><link href="/css/app.fb0c6e1c.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but finkiin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.28d0d835.js"></script><script src="/js/app.3af47145.js"></script></body></html>
